--- a/techio.yml
+++ b/techio.yml
@@ -1,4 +1,4 @@
-title: Simple C Template
+title: How to play with strings in C
 plan:
-- title: C Snippet
+- title: What is a string
   statement: statement.md
