--- a/techio.yml
+++ b/techio.yml
@@ -1,4 +1,6 @@
 title: How to play with strings in C
 plan:
-- title: What is a string
-  statement: statement.md
+    - title: What is a string in C
+      statement: lessons/lesson1.md
+    - title: Lesson 2
+      statement: lessons/lesson2.md
