--- a/techio.yml
+++ b/techio.yml
@@ -4,5 +4,5 @@ plan:
   statement: lessons/lesson1.md
 - title: String Length, String Comparison
   statement: lessons/lesson2.md
-- title: String copy
+- title: String Copy
   statement: lessons/lesson3.md
