--- a/techio.yml
+++ b/techio.yml
@@ -2,7 +2,7 @@ title: How to play with strings in C
 plan:
 - title: What Is A String In C
   statement: lessons/lesson1.md
-- title: Lesson 2
+- title: Safety First
   statement: lessons/lesson2.md
 - title: String Length, String Comparison
   statement: lessons/lesson3.md
